# swmmer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  smoketest.py  versions.json
.github/workflows/: docs.yml  release.yml  test.yml
cmake/: swmm_openmp.cmake
docs/: reference.md
docs/examples/: example.ipynb  example.py  index.md
latest/: 404.html  index.html  sitemap.xml
latest/CHANGELOG/: index.html
latest/CONTRIBUTING/: index.html
latest/LICENSE/: index.html
latest/examples/: index.html
latest/examples/example/: example.ipynb  index.html
latest/reference/: index.html
latest/search/: search_index.json
src/swmmer/: __init__.py  _paths.py  defaults.py  inp.py  plot.py  run.py  storms.py
tests/: smoketest.py  test_inp_generate.py  test_plot.py  test_results.py  test_storms_extra.py  test_swmmer_e2e.py  test_swmmer_validation.py
tools/: repair-macos.sh
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/CHANGELOG/: index.html
v0.1.0/CONTRIBUTING/: index.html
v0.1.0/LICENSE/: index.html
v0.1.0/examples/: index.html
v0.1.0/examples/example/: index.html
v0.1.0/reference/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/CHANGELOG/: index.html
v0.1.1/CONTRIBUTING/: index.html
v0.1.1/LICENSE/: index.html
v0.1.1/examples/: index.html
v0.1.1/examples/example/: index.html
v0.1.1/reference/: index.html
v0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.2/CHANGELOG/: index.html
v0.1.2/CONTRIBUTING/: index.html
v0.1.2/LICENSE/: index.html
v0.1.2/examples/: index.html
v0.1.2/examples/example/: index.html
v0.1.2/reference/: index.html
v0.1.2/search/: search_index.json
